force-app/main/default/objects/Employee__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>