force-app/main/default/objects/Employee__c/fields/E_address__c.field-meta.xml
<CustomField>
    <fullName>E_address__c</fullName>
    <label>E address</label>
    <length>18</length>
    <type>Text</type>
</CustomField>