force-app/main/default/objects/Employee__c/fields/E_name__c.field-meta.xml
<CustomField>
    <fullName>E_name__c</fullName>
    <label>E name</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>