force-app/main/default/objects/Employee__c/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <label>gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sex</valueSetName>
    </valueSet>
</CustomField>