force-app/main/default/objects/Employee__c/validationRules/Phone_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX( Contact__c , &quot;^[0-9]{10}$&quot;) )</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Enter valid contact number</errorMessage>
</ValidationRule>